# marginalia

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
backend/: clients.py  config.py  database.py  main.py  schemas.py  seed.py
backend/evaluation/: harness.py  metrics.py
backend/pipeline/: chunking.py  generation.py  guard.py  ingestion.py  orchestrator.py  resolver.py  retrieval.py
backend/routers/: chat.py  evals.py  notebooks.py  sources.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatPane.jsx  Citation.jsx  EvalsDashboard.jsx  GlassBox.jsx  KnowledgeBaseCard.jsx  NotebookCard.jsx  SourcesRail.jsx  TopBar.jsx
frontend/src/lib/: storage.js
frontend/src/pages/: Landing.jsx  Notebook.jsx
kb/Nivara_Assurance_Technologies/: tests_2.jsonl
kb/Nivara_Assurance_Technologies/company/: careers.md  culture.md  operating-model.md  overview.md
kb/Nivara_Assurance_Technologies/contracts/: 01-BimaMandi-JanSetu-Insurance-Advisors.md  01-DaavaSaarthi-Sudarshan-Claims-Bureau.md  01-GrihaSuraksha-Konkan-Property-Shield.md  01-JeevanPravaah-Sampoorna-Life-Trust.md  01-PunarSetu-Meridian-Re-Solutions.md  01-SwasthyaNiti-Arogya-Kiran-Health-Plan.md  01-VaahanSetu-Pragati-Motor-Protect.md  01-VyapaarKavach-Kshetra-Enterprise-Cover.md  02-BimaMandi-Mitra-Cover-Exchange.md  02-DaavaSaarthi-Monsoon-Response-Services.md  02-GrihaSuraksha-Vindhya-Home-Guard.md  02-JeevanPravaah-Astitva-Life-Company.md  02-PunarSetu-Sutra-Risk-Transfer.md  (+23 more)
(+45 files in other folders)
