[project]
name = "production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "litellm>=1.89.4",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sqlmodel>=0.0.38",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.19",
]
